# uavinoics_workshop2

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml  joint_names_car_model_v2.yaml  position.yaml
launch/: auto.launch  display.launch  gazebo.launch  singlePillar.launch  teleop.launch
meshes/: base_link.STL  base_link_collision.STL  base_link_visual.STL  bl_wheel_link.STL  br_wheel_link.STL  camera_link.STL  caster_link.STL  fl_wheel_link.STL  fr_wheel_link.STL  left_wheel_link.STL  left_wheel_link_collision.STL  left_wheel_link_visual.STL  right_wheel_link.STL  right_wheel_link_collision.STL  right_wheel_link_visual.STL  ultrasonic_link.STL
scripts/: auto.py  control.py  teleop_twist_keyboard.py
urdf/: car_model_v2.csv  car_model_v2.urdf  gazebo_plugin.xacro  uavcar_urdf(old).xacro  uavcar_urdf.xacro
world/: maze1.world  singlewall.world
