<package format="2">
  <name>uavcar</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for car_model_v2</p>
    <p>This package contains configuration data, 3D models and launch files
for uavcar robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>joint_state_controller</depend>
  <depend>gazebo</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>

  <!-- Dependencies needed to compile this package. -->  
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>espdrone_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>espdrone_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>